# MaHyCo

./: .travis.yml  CMakeLists.txt  Constantes.h  LectureDonnees.cc  README.md  bascule_ref.sh  check_format.sh  main.cc
Lecture_donnees/: CMakeLists.txt  LectureDonnees.cc  LectureDonnees.h
cppnabla/: CMakeLists.txt
cppnabla/mesh/: CartesianMesh2D.cc  CartesianMesh2D.h  CartesianMesh2DGenerator.cc  CartesianMesh2DGenerator.h
cppnabla/types/: MathFunctions.h  MultiArray.cc
cppnabla/utils/: Utils.cc  Utils.h
eucclhyd_remap/: CMakeLists.txt  CasTest.h  ConditionsLimites.cc  ConditionsLimites.h  CstMesh.h  Eos.h  Eos.h~  Eucclhyd.h  EucclhydRemap.cc  EucclhydRemap.h  GestionTemps.h  Init.cc  Limiteurs.h  PhaseLagrange.cc  PhaseRemap1.cc  PhaseRemap2.cc  PhaseRemapFinal.cc  SchemaParticules.cc  SchemaParticules.h  Utiles-Impl.h  Utiles.cc  UtilesMesh.cc  UtilesRemap-Impl.h  UtilesRemap.cc
includes/: CasTest.h  ConditionsLimites.h  Constantes.h  CstMesh.h  Eos.h  Freefunctions.h  Limiteurs.h  Options.h  SchemaLagrange.h  SchemaParticules.h  Sortie.h  VariablesLagRemap.h
initialisations/: CMakeLists.txt  CMakeLists.txt~  Init.h  Init.h~  InitBoundaryConditions.cc  InitMeshQuantities.cc  InitSpecificVariables.cc  InitVarAdvection.cc  InitVarImplosion.cc  InitVarNOH.cc  InitVarRIDER.cc  InitVarSEDOV.cc  InitVarSOD.cc  InitVarShockBubble.cc  InitVarTriplePoint.cc  InitVarUNITTEST.cc  InitVariables.cc  InitVariables.cc~  InitVariablesVNR.cc  InitVariablesVNR.cc~
lecture_donnees/: CMakeLists.txt  LectureDonnees.cc  LectureDonnees.h
particle_scheme/: CMakeLists.txt  SchemaParticules.cc  SchemaParticules.h
remap/: BoundaryFluxes.cc  CMakeLists.txt  CMakeLists.txt~  DualPhaseRemap1.cc  DualPhaseRemap2.cc  FacesLeftAndRight.h  FacesTopAndBottom.h  PhaseRemap1.cc  PhaseRemap2.cc  PhaseRemapFinal.cc  Remap.h  Remap.h~  UtilesDualRemap.cc  UtilesMesh.cc  UtilesRemap-Impl.h  UtilesRemap.cc
tests/: CMakeLists.txt  launch_test.sh
tests/ADVECTION_VITX_bi_mat_Superbee_A1_vnr/: donnees.txt
tests/ADVECTION_VITX_bi_mat_Superbee_PenteBorne_pure_A1_vnr/: donnees.txt
tests/ADVECTION_VITX_bi_mat_Superbee_PenteBorne_pure_PB_vnr/: donnees.txt
tests/ADVECTION_X_Mono_mat_Minmod_vnr_o2/: donnees.txt
tests/ADVECTION_X_Mono_mat_Superbee_vnr_o2/: donnees.txt
tests/ADVECTION_X_Mono_mat_vnr_o1/: donnees.txt
tests/ADVECTION_X_bi_mat_Minmod_PenteBorne_pure_complet_vnr_o2/: donnees.txt
tests/ADVECTION_X_bi_mat_Minmod_PenteBorne_pure_vnr_o2/: donnees.txt
tests/ADVECTION_X_bi_mat_Superbee_PenteBorne_pure_complet_vnr_o2/: donnees.txt
tests/ADVECTION_X_bi_mat_Superbee_PenteBorne_pure_vnr_o2/: donnees.txt
tests/ADVECTION_X_bi_mat_Superbee_vnr_o2/: donnees.txt
tests/ADVECTION_X_bi_mat_vnr_o1/: donnees.txt
tests/POINT_TRIPLE_MinMod_simple/: donnees.txt
tests/POINT_TRIPLE_SuperBee_PenteBorne_mixte/: donnees.txt  donnees.txt~
tests/POINT_TRIPLE_SuperBee_PenteBorne_pure/: donnees.txt
tests/POINT_TRIPLE_proj_ordre_3/: donnees.txt
tests/RIDERVORTEX_TR_Monomat-minmod/: donnees.txt
tests/RIDERVORTEX_TR_Monomat-penteborne-superbee/: donnees.txt
tests/RIDERVORTEX_TR_bi_mat_Superbee/: donnees.txt
tests/RIDERVORTEX_TR_bi_mat_penteborne_Superbee/: donnees.txt
tests/SEDOV_Mono_Mat_MinModG_simple/: donnees.txt
tests/SEDOV_Mono_Mat_MinModG_simple_vnr/: donnees.txt
tests/SEDOV_Mono_Mat_Superbee_PenteBorne_mixte/: donnees.txt
tests/SODSTIFF_X_bi_mat_Lagrange_Euc/: donnees.txt
tests/SOD_X_Mono_mat_Lagrange_Vnr/: donnees.txt
vnr_remap/: CMakeLists.txt  ConditionsLimites.cc  Init.cc  PhaseLagrange.cc  PhaseRemapFinal.cc  PrepareRemap.cc  Vnr.h  VnrRemap.cc  VnrRemap.h
(+2266 files in other folders)
